# cpu5

./: 16_bit_reg_cnt.dig  CMakeLists.txt  MMU.dig  aa  alu_board.dig  ata.dig  chip_high.hex  chip_low.hex  cpu.dig  cpu5.circ  decode.dig  hex  inc.hex  install.sh  interrupt.dig  isa  mar.dig  new_isa  prog1  prog2  prog3  prog4  prog5  snake.c  snake1.c
Baselibc/: testbuild.sh
Baselibc/include/: inttypes.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdlib.h  string.h  unistd.h
Baselibc/include/klibc/: extern.h  inline.h
Baselibc/include/sys/: types.h
Baselibc/src/: atoi.s  atol.c  atoll.c  jrand48.c_  lrand48.c  malloc.c  qsort.c  strlen.s  strntoumax.c  strtol.c  strtoll.c  strtoul.c  strtoull.c  vsscanf.c
SmallerC/v0100/: Makefile  cgrlcpu.c  cgrlcpu_emitters.c  smlrc.c  smlrc86  tree.h
alu/: CMakeLists.txt  Makefile  alu_chip  alu_generator.c  gen.sh  generate_alu_table.cpp  spec
binutils/: CMakeLists.txt  Makefile  asm.c  build.sh  constants.c  constants.h  cpu5as  cpu5build  cpu5ld  crt0.s  crt_end.s  kcrt0.s  keywords.h  labels.c  labels.h  link.c  link.h  robj.h  sections.c  sections.h  token.c  token.h  util.c  util.h
compiler/chibicc/: ast_dump.c  chibicc.h  codegen.c  codegen_cpu5.c  codegen_x86.c
compiler/chibicc/samples/: sample.c
compiler/smlrc/: CMakeLists.txt  cgrlcpu.c  cgrlcpu_emitters.c  smlrc.c
compiler/ucpp/: CMakeLists.txt  config.h
microcode/: CMakeLists.txt  Makefile  cpu5.txt  cpu6.txt  gen.sh  instruction_set.ods  mc_compiler.cpp
os/apps/src/: app1.c  app2.c  build.sh  sh.c  test_app.c
os/kernel/: ata.c  blk.c  blk.h  build_kernel.sh  interrupts.c  interrupts.h  kernel_main.c  klib.c  klib.h  mmu.c  mmu.h  proc.c  proc.h  syscall.c  syscall.h  types.h  uart.c
progs/: c_prog.c  kernel_main.c  leds.s  main.c  main.s  prog4.hex  prog4.s  prog5.hex  prog5.s  prog_adc.s  prog_memset.s  prog_memset_ptr.s  prog_memset_z.s  rom.hex  snake.c  snake.s  t.c  test.s
schematics/7400_lib/: 7400_ice.kicad_sym  at28c256.kicad_sym  at28c64.kicad_sym
schematics/cpu5/: Makefile  alu.kicad_sch  cpu5.kicad_pcb  cpu5.kicad_prl  cpu5.kicad_pro  cpu5.kicad_sch  interrupts.kicad_sch  memory.kicad_sch  registers.kicad_sch  tb.v  v_sim.cpp
schematics/cpu5/icechips/: 7400.v  7402.v  7404.v  7408.v  74138.v  74161.v  74193.v  7432.v  74541.v  74574.v  7474.v  7483.v  7486.v  memory.v  roms.v
simulation/common/: CMakeLists.txt  devices.cpp  devices.hpp
simulation/logic/: CMakeLists.txt  l_sim.cpp  l_sim.hpp
simulation/verilator/: CMakeLists.txt  Makefile  v_sim.cpp
simulation/verilator/icechips/: 7400.v  7402.v  7404.v  7408.v  74138.v  74161.v  74193.v  7432.v  74541.v  74573.v  74574.v  7474.v  7483.v  7486.v  memory.v
software/: umake.mk
software/apps/: minibox_sh.c  umake.mk
software/apps/src/: app2.c  sh.c  umake.mk
software/fs_static/: nums
software/kernel/: ata.c  ata.h  fs.c  fs.h  interrupts.c  interrupts.h  kernel_main.c  klib.c  mmu.c  mmu.h  proc.c  proc.h  syscall.c  uart.c  uart.h  umake.mk
tools/: CMakeLists.txt  Makefile  cpu5genfs  mkfs.c  umake
